# mijnbib

./: .gitignore  LICENSE  Makefile  README.md  changelog.md  libraries.md  pyproject.toml  update_biblist.py
.github/workflows/: lint-markdown.yml  python-app.yml
examples/: example.py  loans_extras.py
src/mijnbib/: __init__.py  __main__.py  changelog.md  const.py  errors.py  login_handlers.py  mijnbibliotheek.py  models.py  parsers.py  plugin_errors.py
tests/: save_testref.py  test_errors.py  test_mijnbib.py  test_mijnbibliotheek.py  test_parsers.py  tst_mijnbibliotheek.py
