[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mijnbib"
version = "0.5.6"
description = "Python API voor de website mijn.bibliotheek.be"
readme = "README.md"
authors = [{ name = "Ward Van Heddeghem", email = "wardvh@fastmail.fm" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mijn bibliotheek", "bibliotheek"]
dependencies = ["mechanize", "bs4", "requests"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["ruff >=0.4", "pytest"]

[project.urls]
Homepage = "https://github.com/wvanhed/mijnbib"
Changelog = "https://github.com/wvanhed/mijnbib/blob/main/changelog.md"

[tool.pytest.ini_options]
minversion = "7.0"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
# addopts = "--doctest-modules --doctest-continue-on-failure"

[tool.ruff]
line-length = 95 # same as Black
src = ["src"]    # consider folder as first-party import

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8 naming
    "SIM", # flake8-simplify, for simplified code
    "PTH", # pathlib (instead of os.path)
    "W",   # warning
    "T2",  # flake8-print (avoiding prints)
    "S",   # bandit, security checks
]
ignore = [
    "N818",   # error suffix in exception names
    "SIM105", # suppressible-exception (contextlib usage)
    "SIM910", # dict-get-with-none-default
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["T"]
"examples/*" = ["T"]
"**/tests*" = ["S101"] # Use of `assert` detected
